# mouse_automation

./: Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
